# nlp-qwen-ocr

./: .gitignore  README.md  REPORT.md  insert_breaks.py  json_to_markdown.py  link_counts.txt  main.py  markdown_to_docx.py  materialize_fake_links.py  media_pages.txt  ocr_to_markdown.py  pyproject.toml  trim_markdown_raw.py
docs/book1/pages_data/: page_data_00001.json  page_data_00002.json  page_data_00003.json  page_data_00004.json  page_data_00005.json  page_data_00006.json  page_data_00007.json  page_data_00008.json  page_data_00009.json  page_data_00010.json  page_data_00011.json  page_data_00012.json  page_data_00013.json  page_data_00014.json  page_data_00015.json  page_data_00016.json  page_data_00017.json  page_data_00018.json  page_data_00019.json  page_data_00020.json  page_data_00021.json  page_data_00022.json  page_data_00023.json  page_data_00024.json  page_data_00025.json  page_data_00026.json  page_data_00027.json  page_data_00028.json  page_data_00029.json  page_data_00030.json  page_data_00031.json  page_data_00032.json  page_data_00033.json  page_data_00034.json  page_data_00035.json  page_data_00036.json  page_data_00037.json  page_data_00038.json  page_data_00039.json  page_data_00040.json  (+219 more)
docs/book2/pages_data/: page_data_00001.json  page_data_00002.json  page_data_00003.json  page_data_00004.json  page_data_00005.json  page_data_00006.json  page_data_00007.json  page_data_00008.json  (+678 more)
nlp_qwen_ocr/: __init__.py  docx_exporter.py  markdown_utils.py  ocr_client.py
utils/: count_markdown_links.py  list_media_pages.py  trim_markdown_raw.py
(+363 files in other folders)
