[project]
name = "nlp-qwen-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "open-clip-torch>=3.2.0",
    "pillow>=12.0.0",
    "python-docx>=1.2.0",
    "qwen-vl-utils>=0.0.14",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wrapt>=2.0.1",
]
